...
            android:layout_width="@dimen/nav_pill_width"
            android:layout_height="@dimen/nav_pill_height"
            android:background="@drawable/bg_home_meta_pill"
            android:layout_marginTop="@dimen/space_4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/admin_guide_pill_bottom"
            app:layout_constraintStart_toStartOf="@id/adminNavDashboard"
            app:layout_constraintEnd_toEndOf="@id/adminNavDashboard" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/admin_guide_pill_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:paddingTop="@dimen/space_8"
            android:paddingBottom="@dimen/space_8"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/adminNavCommandes"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
...
            android:paddingTop="@dimen/space_8"
            android:paddingBottom="@dimen/space_8"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/adminNavProduits"
            app:layout_constraintStart_toEndOf="@id/adminNavDashboard"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/adminNavCommandesIcon"
...
            android:paddingTop="@dimen/space_8"
            android:paddingBottom="@dimen/space_8"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/adminNavClients"
            app:layout_constraintStart_toEndOf="@id/adminNavCommandes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/adminNavProduitsIcon"
...
            android:paddingTop="@dimen/space_8"
            android:paddingBottom="@dimen/space_8"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/adminNavNotifications"
            app:layout_constraintStart_toEndOf="@id/adminNavProduits"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/adminNavClientsIcon"
...
