...
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvEditPriceTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEditPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/admin_price_edit_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditPriceCancel"
        style="@style/Ms.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ms_action_cancel"
...
