...
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/nav_tab_cart"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/hostNavProfile"
                app:layout_constraintStart_toEndOf="@id/hostNavVoiceSpace"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="36dp"
                    android:layout_height="30dp"
...
