...
            android:contentDescription="@string/ms_action_filter"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_ms_more_vert"
            app:tint="@color/ms_text_secondary" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/adminProductBtnDelete"
            android:layout_width="@dimen/surface_button_size"
            android:layout_height="@dimen/surface_button_size"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:contentDescription="@string/cd_delete"
            android:focusable="true"
...
