appId: isim.ia2y.myapplication
---
- launchApp
- tapOn:
    id: "isim.ia2y.myapplication:id/hostNavProfile"
- tapOn:
    id: "isim.ia2y.myapplication:id/cardAdmin"
- tapOn:
    id: "isim.ia2y.myapplication:id/adminNavProduits"
- tapOn:
    id: "isim.ia2y.myapplication:id/adminProduitsBtnAdd"
- tapOn:
    id: "isim.ia2y.myapplication:id/adminProductEditorBtnPickImage"
- takeScreenshot: system-image-picker-current
