appId: isim.ia2y.myapplication
---
- extendedWaitUntil:
    visible:
      id: "isim.ia2y.myapplication:id/adminProduitsBtnAdd"
    timeout: 15000
- tapOn:
    id: "isim.ia2y.myapplication:id/adminProductBtnDelete"
- tapOn: "Supprimer"
- extendedWaitUntil:
    visible:
      id: "isim.ia2y.myapplication:id/adminProduitsBtnAdd"
    timeout: 30000
- takeScreenshot: admin-products-after-delete-fixed
